dont set width in % to stop streaching of gap

--- a/home.css
+++ b/home.css
@@ -6,7 +6,6 @@
 
 .tile
 {
-    width: 30%;
     min-width: 300px;
     margin: 10px;
 }
